# udsc

./: .gitignore  Makefile.am  README.md  configure.ac
scripts/: version.sh
src/: client.c  client.h  connection.c  connection.h  main.c  server.c  server.h  udsc.c  udsc.h  utils.c  utils.h
